# licosim

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  buildlicosim.bat  licosim.cmake
src/: licosim.cpp  licosim.hpp  licosimexe.cpp  main.cpp  projectsettings.hpp
